@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed that queueing to the front would remove the active research from the queue
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2023-01-10
